2006-04-04 Bart Hakvoort <hakvoort@cvs.gnome.org>
	
	* src/GParted_Core.cc: store libparted error in Partition::error if
	  reading the used/unused space failed.

2006-04-03 Bart Hakvoort <hakvoort@cvs.gnome.org>
	
	* include/Dialog_Filesystems.h,
	  src/Dialog_Filesystems.cc: added column 'check'
	* include/GParted_Core.h,
	  src/GParted_Core.cc: use halproperty
	  'storage.automount_enabled_hint' instead of pmount to disable
	  automounting.
	  
2006-04-02 Bart Hakvoort <hakvoort@cvs.gnome.org>

	* include/GParted_Core.h,
	  src/GParted_Core.cc: improved disabling of automounting. It's still
	  somewhat crude, but right now it's ok for some semi-public testing.
	  I'll do some cleanups tomorrow morning.
	* src/Dialog_Progress.cc: added FIXME

2006-04-02 Bart Hakvoort <hakvoort@cvs.gnome.org>

	* include/GParted_Core.h,
	  src/GParted_Core.cc: an initial solution for the automount problem.
	  I still need to add something to prevent just created partitions from
	  getting mounted. (see #324220 for more info)

2006-04-02 Bart Hakvoort <hakvoort@cvs.gnome.org>

	* include/Dialog_Filesystems.h,
	  include/GParted_Core.h,
	  include/Makefile.am,
	  include/ufs.h,
	  src/GParted_Core.cc,
	  src/Makefile.am,
	  src/ufs.cc: added ufs filesystemclass

2006-04-02 Bart Hakvoort <hakvoort@cvs.gnome.org>

	* include/Win_GParted.h,
	  src/Win_GParted.cc: override Gtk::Window::on_show instead of
	  connecting to signal_show()
	* include/Dialog_Filesystems.h,
	  src/Dialog_Filesystems.cc: added columns 'detect' and 'read'

2006-04-02 Bart Hakvoort <hakvoort@cvs.gnome.org>

	* include/Utils.h,
	  src/Utils.cc: added convenience function
	* src/DialogManageFlags.cc,
	  src/Win_GParted.cc: cleanups

2006-04-02 Bart Hakvoort <hakvoort@cvs.gnome.org>

	* include/DialogManageFlags.h,
	  src/DialogManageFlags.cc,
	  src/Win_GParted.cc: improved behaviour of flagmanagementdialog.
	  
2006-04-01 Bart Hakvoort <hakvoort@cvs.gnome.org>

	* src/OperationResizeMove.cc: fixed another issue in