@@ -1,5 +1,10 @@
 2006-04-04 Bart Hakvoort <hakvoort@cvs.gnome.org>
 	
+	* src/GParted_Core.cc: remove non-existent devices from
+	  disabled_automount_devices at every rescan.
+
+2006-04-04 Bart Hakvoort <hakvoort@cvs.gnome.org>
+	
 	* src/GParted_Core.cc: store libparted error in Partition::error if
 	  reading the used/unused space failed.
 
